--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -10,12 +10,15 @@
 {% if latest_question_list %}
 <ul>
     {% for question in latest_question_list %}
-    <li style="border: 2px solid black; width: 10%; display: flex; flex-direction: column; align-items: center;">
-        <a href="{% url 'polls:detail' question.id %}">{{question.question_text}}</a>
-    {% if question.image %}    
-    <img src="{{ question.image.url }}" alt="" style="width: 120px">
+    {% if question.exp_date <= today or user.is_staff %}
+        <li style="border: 2px solid black; width: 10%; display: flex; flex-direction: column; align-items: center;">
+            <a href="{% url 'polls:detail' question.id %}">{{question.question_text}}</a>
+        {% if question.image %}
+        <img src="{{ question.image.url }}" alt="" style="width: 120px">
+        {% endif %}
+            <p>{{question.pub_date}}</p>
+        </li>
     {% endif %}
-    </li>
     {% endfor %}
 </ul>
 {% else %}
