--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -4,6 +4,7 @@
         <legend>
             <h1>{{question.question_text}}</h1>
         </legend>
+        <p>{{question.description}}</p>
         {% if error_message %}<p><strong> {{error_message}}</strong></p>{% endif %}
         {% for choice in question.choice_set.all %}
         <input type="radio" name="choice" id="choice{{forloop.counter}}" value="{{choice.id}}">
